@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.8.2
 
+ - Fix bug with multiple SetPixelFormat calls. (reported and fixed by anontypist)
  - Fix bug related to memory release in PNG image loader. Thanks elephoenix for it.
  - Fix crash in CGUIListBox when users pressed end key folled by any other key in an empty, focused list box (thanks at porcus for report and patch).
  - Example 22 no longer select a random texture after loading a new texture (thanks at mongoose7 for reporting).
